--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,16 +29,12 @@ p {
 
 @import "navbar";
 @import "movie-list";
+@import "pagination";
 .logo {
 	width: 100%;
 	height: 100%;
 }
-.pagination {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-	align-items: center;
-}
+
 .toggle {
 	display: none;
 }
