--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,6 +27,25 @@ p {
 	margin: 1rem 0;
 }
 
+.status-container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.status-group {
+	width: 30vw;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	margin: 2rem;
+}
+.status-icon {
+	float: left;
+}
+
 @import "navbar";
 @import "movie-list";
 @import "pagination";
