--- a/styles/_movie-list.scss
+++ b/styles/_movie-list.scss
@@ -15,7 +15,7 @@
 	min-height: 100%;
 
 	// display: flex;
-	// flex-direction: row;
+	// flex-direction: column;
 	// justify-content: flex-start;
 	margin: 0.5rem;
 	padding: 1.5rem;
