--- a/styles/_movie-list.scss
+++ b/styles/_movie-list.scss
@@ -1,24 +1,21 @@
 .movie-list {
 	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 	@media only screen and (min-width: 992px) {
 		& {
-			display: flex;
-			flex-direction: row;
-			flex-wrap: wrap;
-			justify-content: space-between;
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
 		}
 	}
 }
 .movie-container {
-	flex: 0 32%;
 	width: 100%;
-	min-height: 100%;
+	height: 100%;
 
-	// display: flex;
-	// flex-direction: column;
-	// justify-content: flex-start;
-	margin: 0.5rem;
-	padding: 1.5rem;
+	display: flex;
+	flex-direction: column;
+	padding: 2rem;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -31,13 +28,28 @@
 	max-height: 40vh;
 	max-width: 100%;
 	float: left;
-	margin: 1rem;
+	margin-right: 1rem;
+	margin-top: 0.5rem;
 }
 
 .movie-info {
-	display: block;
-	width: 100%;
 	// flex-direction: column;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	@include responsive(Tablet) {
+		display: block;
+	}
+}
+
+.movie-links {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+}
+.movie-info-group {
+	margin: 1rem 0;
 }
 
 .movie-tag {
@@ -45,7 +57,7 @@
 	padding: 0.1rem 0.3rem;
 	list-style-type: none;
 	background-color: #283038;
-	color: #99aabb;
+	color: $tag-text-color;
 	text-decoration: none;
 }
 
