--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 	flex-wrap: wrap;
 	list-style-type: none;
-	background-color: #14181c;
+	background-color: $navbar-color;
 	padding: 0 2rem;
 	font-family: "Roboto", sans-serif;
 }
@@ -29,10 +29,10 @@
 	letter-spacing: 0.1rem;
 	display: block;
 	width: 100%;
-	text-decoration: none;
 	color: #e8ebed;
 	font-size: 1rem;
 	font-weight: 400;
+	text-decoration: none;
 }
 button {
 	padding: 6px 10px;
