--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,31 +1,11 @@
-* {
-	box-sizing: border-box;
-	color: #d8d8d8;
-	margin: 0;
-	padding: 0;
-}
-html {
-	background-color: #191e23;
-	display: flex;
-	flex-direction: row;
-}
-body {
-	width: 100%;
-}
-
-main {
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	background-image: linear-gradient(#1f262d, #14181c);
-	padding: 1rem 5rem;
-}
-h1 {
-	text-transform: capitalize;
-}
-p {
-	margin: 1rem 0;
-}
+@import "variables";
+@import "functions";
+@import "mixins";
+@import "normalize";
+@import "base";
+@import "navbar";
+@import "movie-list";
+@import "pagination";
 
 .status-container {
 	width: 100%;
@@ -60,17 +40,7 @@ p {
 	width: 100%;
 	height: 50vh;
 }
-.info-button {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	align-items: center;
-	min-height: 100%;
-}
 
-@import "navbar";
-@import "movie-list";
-@import "pagination";
 .logo {
 	width: 100%;
 	height: 100%;
@@ -160,9 +130,6 @@ option {
 @media only screen and (min-width: 768px) {
 	.tags {
 		margin-left: 1rem;
-	}
-	p {
-		margin-left: 1.5rem;
 	}
 
 	.info {
