--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -10,11 +10,14 @@ html {
 	// @include responsive(HD) {
 	// 	font-size: 18px;
 	// }
-	@include responsive(FHD) {
+	@include responsive(Tablet) {
 		font-size: 18px;
 	}
+	@include responsive(FHD) {
+		font-size: 20px;
+	}
 	@include responsive(QHD) {
-		font-size: 22px;
+		font-size: 24px;
 	}
 	@include responsive(UHD) {
 		font-size: 24px;
@@ -35,27 +38,26 @@ main {
 	}
 }
 h1 {
-	font-size: ms($ms-base, 5);
+	font-size: ms(5);
 }
 h2 {
-	font-size: ms($ms-base, 4);
+	font-size: ms(4);
 }
 h3 {
-	font-size: ms($ms-base, 3);
+	font-size: ms(3);
 }
 h4 {
-	font-size: ms($ms-base, 2);
+	font-size: ms(2);
 }
 h5 {
-	font-size: ms($ms-base, 1);
+	font-size: ms(1);
 }
 h6 {
-	font-size: ms($ms-base, 0);
+	font-size: ms(0);
 }
 
 p {
-	width: minmax(75ch, 100%);
-	text-indent: 2rem;
+	// width: minmax(75ch, 100%);
 	@include responsive(HD) {
 		width: clamp(45ch, 100%, 75ch);
 	}
