--- a/styles/_movie-list.scss
+++ b/styles/_movie-list.scss
@@ -1,12 +1,14 @@
 .movie-list {
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: 1fr;
 	gap: 1rem;
-	@media only screen and (min-width: 992px) {
-		& {
-			display: grid;
-			grid-template-columns: repeat(3, 1fr);
-		}
+	margin: 1rem 0;
+
+	@include responsive(HD) {
+		grid-template-columns: repeat(2, 1fr);
+	}
+	@include responsive(FHD) {
+		grid-template-columns: repeat(3, 1fr);
 	}
 }
 .movie-container {
@@ -19,17 +21,23 @@
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
-.movie-title {
-	font-size: 2rem;
-}
+// .movie-title {
+// 	font-size: 2rem;
+// }
 
 .movie-thumb {
 	object-fit: contain;
-	max-height: 40vh;
+	max-height: 50vh;
 	max-width: 100%;
-	float: left;
-	margin-right: 1rem;
-	margin-top: 0.5rem;
+	@include orientation(landscape) {
+		float: left;
+		margin-right: 1rem;
+	}
+	@include responsive(Tablet) {
+		max-width: 50%;
+		float: left;
+		margin-right: 1rem;
+	}
 }
 
 .movie-info {
@@ -37,28 +45,61 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
+	margin: 1rem 0;
+	@include orientation(landscape) {
+		display: block;
+	}
 	@include responsive(Tablet) {
 		display: block;
 	}
+}
+
+.movie-info-short {
+	display: block;
 }
 
 .movie-links {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: flex-start;
+	align-items: center;
+	flex-wrap: wrap;
+	margin: 0.5rem;
+	font-size: ms(1);
+	@include orientation(landscape) {
+		flex-direction: row;
+	}
+	@include responsive(Tablet) {
+		flex-direction: row;
+	}
 }
+.movie-link {
+	width: 100%;
+	margin: 0.2rem;
+	padding: 0.1rem 0.3rem;
+	list-style-type: none;
+	background-color: $link-color;
+	color: $tag-text-color;
+	text-decoration: none;
+	text-align: center;
+}
+
 .movie-info-group {
 	margin: 1rem 0;
+}
+
+.movie-info-heading {
+	margin-bottom: 0.5rem;
 }
 
 .movie-tag {
 	margin: 0.2rem;
 	padding: 0.1rem 0.3rem;
 	list-style-type: none;
-	background-color: #283038;
+	background-color: $link-color;
 	color: $tag-text-color;
 	text-decoration: none;
+	text-align: center;
 }
 
 .movie-tag-list {
