--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -1,11 +1,13 @@
 #menu {
 	width: 100%;
+	height: 100%;
 	display: flex;
+	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
 	list-style-type: none;
 	background-color: $navbar-color;
-	padding: 0 2rem;
+	// padding: 0 2rem;
 	font-family: "Roboto", sans-serif;
 }
 .nav-item {
@@ -14,7 +16,8 @@
 	padding: 1rem;
 }
 .searchbar {
-	padding: 0 1rem;
+	display: flex;
+	flex-direction: row;
 }
 .searchbar input[type="text"] {
 	border-radius: 10px;
@@ -42,6 +45,19 @@ button {
 	cursor: pointer;
 }
 
-.logo {
-	flex: 1 1;
+.nav-logo-wrapper {
+	padding-left: 1rem;
+	flex: 1;
+}
+
+.nav-logo {
+	display: block;
+	object-fit: contain;
+	max-width: 100vw;
+	max-height: 5vh;
+
+	@include responsive(Tablet) {
+		max-width: 100%;
+		max-height: 5vh;
+	}
 }
