--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,6 @@
 $text-color: #d8d8d8;
 $tag-text-color: #99aabb;
 $background-color: #191e23;
+$link-color: #283038;
 $navbar-color: #14181c;
-$ms-ratio: 1.12;
-$ms-base: 16px;
+$ms-ratio: 1.2;
