--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -5,6 +5,9 @@
 	padding: 0;
 }
 html {
+	width: 100vw;
+
+	overflow-x: hidden;
 	background-color: $background-color;
 	font-size: 16px;
 	// @include responsive(HD) {
@@ -14,21 +17,24 @@ html {
 		font-size: 18px;
 	}
 	@include responsive(FHD) {
-		font-size: 20px;
+		font-size: 18px;
 	}
 	@include responsive(QHD) {
 		font-size: 24px;
 	}
 	@include responsive(UHD) {
-		font-size: 24px;
+		font-size: 40px;
 	}
 }
-body {
-	width: 100%;
+
+#__next {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 main {
-	min-height: 100vh;
+	flex: 2;
 	display: flex;
 	flex-direction: column;
 	background-image: linear-gradient(#1f262d, #14181c);
