--- a/styles/_movie-list.scss
+++ b/styles/_movie-list.scss
@@ -37,6 +37,7 @@
 		max-width: 50%;
 		float: left;
 		margin-right: 1rem;
+		// margin-bottom: 1rem;
 	}
 }
 
@@ -64,7 +65,7 @@
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	margin: 0.5rem;
+	margin-bottom: 0.5rem;
 	font-size: ms(1);
 	@include orientation(landscape) {
 		flex-direction: row;
@@ -85,6 +86,14 @@
 }
 
 .movie-info-group {
+	margin: 1rem 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+}
+
+.movie-info-summary {
 	margin: 1rem 0;
 }
 
