--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,6 +27,7 @@
 }
 
 .content {
+	flex: 1;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -39,11 +40,6 @@
 	flex-direction: column;
 	width: 100%;
 	height: 50vh;
-}
-
-.logo {
-	width: 100%;
-	height: 100%;
 }
 
 .toggle {
@@ -79,10 +75,6 @@
 	text-align: left;
 	margin: 1rem;
 	padding-left: 5rem;
-}
-
-h2 {
-	margin-top: 0;
 }
 
 fieldset {
@@ -125,33 +117,3 @@ option {
 	margin: 0.5rem;
 	/* min-width: 150px; */
 }
-
-// /* Medium devices (landscape tablets, 768px and up) */
-// @media only screen and (min-width: 768px) {
-// 	.tags {
-// 		margin-left: 1rem;
-// 	}
-
-// 	.info {
-// 		display: flex;
-// 		flex-direction: row;
-// 	}
-// 	img {
-// 		object-fit: contain;
-// 		max-width: 200px;
-// 		height: auto;
-// 	}
-// }
-// /* Large devices (laptops/desktops, 992px and up) */
-// @media only screen and (min-width: 992px) {
-// 	// main {
-// 	// 	display: grid;
-// 	// 	grid-template-columns: 1fr 1fr;
-// 	// }
-
-// 	img {
-// 		object-fit: contain;
-// 		max-width: 250px;
-// 		height: auto;
-// 	}
-// }
