imporoved form handling and clarity

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,4 +3,6 @@ $tag-text-color: #99aabb;
 $background-color: #191e23;
 $link-color: #283038;
 $navbar-color: #14181c;
+$bright-color: #a05c7b;
+
 $ms-ratio: 1.2;
