--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -19,7 +19,7 @@
 	display: flex;
 	flex-direction: row;
 }
-.searchbar input[type="text"] {
+input[type="text"] {
 	border-radius: 10px;
 	padding: 0.4rem 1rem;
 	text-align: left;
