--- a/styles/_form.scss
+++ b/styles/_form.scss
@@ -1,54 +1,60 @@
 fieldset {
-	width: 100%;
+  width: 100%;
 }
 
 #filter_search {
-	background: #2c3440;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+  background: #2c3440;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-	// padding: 0.5rem;
+  // padding: 0.5rem;
 }
 
 #filter_search input,
 select,
 option {
-	max-width: 200px;
-	border-radius: 10px;
-	padding: 0.2rem 0.5rem;
-	text-align: left;
-	font-size: 1rem;
-	color: black;
-	border: none;
-	flex: 1 1;
+  max-width: 200px;
+  border-radius: 10px;
+  padding: 0.2rem 0.5rem;
+  text-align: left;
+  font-size: 1rem;
+  color: black;
+  border: none;
+  flex: 1 1;
 }
 
 .form-items {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-	align-items: center;
-	flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  &--generate {
+    flex-direction: column;
+  }
 }
 .form-group {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	margin: 0.5rem;
-	/* min-width: 150px; */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0.5rem;
+  /* min-width: 150px; */
 }
 .form-label {
-	margin: 0.5rem;
+  margin: 0.5rem;
 }
 .recommendation-form {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	margin: 1rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem 0;
+  width: 100%;
 }
 .recommendation-items {
-	min-width: 60%;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
 }
