--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,81 +10,97 @@
 @import "footer";
 @import "form";
 
+.main {
+  &__header {
+    font-size: ms(5);
+    text-align: center;
+  }
+  &__subheader {
+    font-size: ms(3);
+    padding-bottom: 1em;
+    text-align: center;
+  }
+}
+
 .status-container {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .status-group {
-	width: 30vw;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	margin: 2rem;
+  max-width: 75ch;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2rem;
 }
 .status-icon {
-	float: left;
+  float: left;
+  margin-right: 1em;
+}
+.status-text {
+  text-align: center;
 }
 
 .content {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .loading {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	width: 100%;
-	height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 50vh;
 }
 
 .toggle {
-	display: none;
+  display: none;
 }
 
 .btn {
-	background-color: #2c3440;
+  background-color: #2c3440;
 
-	border: none;
-	color: white;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: ms(0);
-	border-radius: 10px;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: ms(0);
+  border-radius: 10px;
 }
 
 .filter-btn {
-	color: white;
-	width: 100px;
-	margin-top: 1rem;
-	padding: 0.4rem 0.6rem;
-	text-align: center;
-	display: inline-block;
-	font-size: 1rem;
-	background-color: #00b020;
+  color: white;
+  width: 100px;
+  margin-top: 1rem;
+  padding: 0.4rem 0.6rem;
+  text-align: center;
+  display: inline-block;
+  font-size: 1rem;
+  background-color: #00b020;
 }
 
 .submit-btn {
-	background-color: #00b020;
-	padding: 1rem 2rem;
-	font-size: ms(2);
+  background-color: #00b020;
+  padding: 1rem 1.5rem;
+  font-size: ms(1);
 }
 
 .info-btn {
-	padding: 0.6rem 1rem;
-	width: 100%;
+  padding: 0.6rem 1rem;
+  width: 100%;
 }
 
 .searchterm {
-	text-align: left;
-	margin: 1rem;
-	padding-left: 5rem;
+  text-align: left;
+  margin: 1rem;
+  padding-left: 5rem;
 }
